cosas de correo

--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "better-sqlite3": "^9.4.1",
     "connect-sqlite3": "^0.9.0",
+    "dotenv": "^17.2.3",
     "express": "^4.19.2",
     "express-session": "^1.17.3",
+    "googleapis": "^166.0.0",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
-    "better-sqlite3": "^9.4.1"
+    "nodemailer": "^7.0.11"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
